syntax = "proto3";

message ArraySimpleProtobufNullable {
  repeat bool boolean = 1;
  repeat int32 int32 = 2;
  repeat uint32 uint32 = 3;
  repeat int64 int64 = 4;
  repeat uint64 uint64 = 5;
  repeat float float = 6;
  repeat double double = 7;
  repeat string string = 8;
  repeat bytes bytes = 9;
  repeat ArraySimpleProtobufNullable object = 10;
}